2018-05-23  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-select-buffer): Pass correct current buffer value to
	`w3m-select-buffer-generate-contents' ([emacs-w3m:12988]).
	(w3m-select-buffer-generate-contents): Variable rename.

2018-05-19  Kevin Ryde  <user42_kevin@yahoo.com.au>

	* w3m-favicon.el (w3m-favicon-setup): Enable favicons be taken from
	file://, too ([emacs-w3m:12983]).

2018-05-18  Boruch Baum  <boruch_baum@gmx.com>

	Make progress messages more uniform and more useful
	([emacs-w3m:12980] [emacs-w3m:12986]).

	* w3m.el (w3m-display-progress-message): Combine code from
	`w3m-retrieve-and-render', separate url from "...", and add
	user-friendly advice message.
	(w3m-retrieve-and-render): Replace snippet with call to
	`w3m-display-progress-message'.

	* w3m-proc.el (w3m-process-stop): Document in the buffer when an
	operation has been aborted by the user, what that operation was, and
	remove progress message.

2018-05-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-proc.el (w3m-process-stop): Don't move point ([emacs-w3m:12976]).

2018-05-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	Work for mailto urls.

	* w3m.el (w3m-url-readable-string): Make w3m-url-decode-string detect
	coding system for mailto url instead of using w3m-url-coding-system.
	(w3m-fontify-anchors, w3m-goto-url): Don't encode mailto url.
	(w3m-goto-mailto-url): Remove CR from, but preserve LF in mailto url;
	don't decode mailto url containing non-ASCII letters.

2018-05-09  Boruch Baum  <boruch_baum@gmx.com>

	Update faces for all navigation cases ([emacs-w3m:12969]).

	* w3m-session.el (w3m--session-update-faces): New function for
	`pre-command-hook' and `post-command-hook' in w3m-session buffers.
	(w3m-session-select-mode): Apply it.
	(w3m-session-select-list-all-sessions, w3m-session-select-next):
	Don't set the "selected" face, because it is now done by the new hook
	function.

2018-05-09  Boruch Baum  <boruch_baum@gmx.com>
